feat(enrollments): persist wizard data
